# smallfish_

./: .env.example  CLAUDE.md  LICENSE  README.md  pyproject.toml
config/: default.yaml  secrets.template.yaml
data/: sweep_results.csv
data/logs/: decisions.csv  orders.csv  snapshots.csv  trades.csv
documentation/: trading_concepts.md
src/: app.py  backtest.py  param_sweep.py
src/core/: profiles.py  ringbuffer.py  state.py  types.py  utils.py
src/exec/: oco.py  risk.py  router.py
src/gateway/: __init__.py  base.py  binance_rest.py  binance_ws.py  bybit_ws.py  dydx_rest.py  dydx_ws.py  factory.py  mexc_rest.py  mexc_ws.py  persistence.py  rest.py  symbol_map.py
src/marketdata/: book.py  features.py  scanner.py  tape.py
src/monitor/: dashboard.py  heartbeat.py  metrics.py
src/remote/: email_alert.py  telegram_bot.py
src/signals/: absorb.py  cvd.py  fuse.py  liq.py  mvr.py  obi.py  prt.py  regime.py  tps.py  umom.py  vwap.py  whale.py
src/smallfish_cli/: entry.py
src/strategies/: multigrid.py
tests/: conftest.py  test_binance_adapter.py  test_core.py  test_dashboard.py  test_email_alert.py  test_features.py  test_fuse.py  test_gateway.py  test_marketdata.py  test_mexc_adapter.py  test_multigrid.py  test_new_signals.py  test_router.py  test_signals.py  test_symbol_map.py  test_telegram.py
