[tool.poetry]
name = "bybit_scalper"
version = "1.0.0"
description = "A high-frequency multi-signal fusion scalper for Bybit perpetual futures."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"
websockets = "^12.0"
aiohttp = "^3.9"
numpy = "^1.26"
orjson = "^3.9"
python-dotenv = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.23"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
