[tool.poetry]
name = "smallfish"
version = "2.0.0"
description = "Open-source signal-fusion scalping engine — microstructure tools for the small fish."
license = "Apache-2.0"
authors = ["Smallfish Contributors"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"
websockets = "^12.0"
aiohttp = "^3.9"
numpy = "^1.26"
orjson = "^3.9"
python-dotenv = "^1.0"
python-telegram-bot = "^21.0"
aiosmtplib = "^3.0"
plotext = "^5.2"
rich = "^13.0"
candlestick-chart = "^3.1"
psutil = "^5.9"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.23"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
